--- a/Selenium Learning/pom.xml
+++ b/Selenium Learning/pom.xml
@@ -3,6 +3,20 @@
   <groupId>Selenium</groupId>
   <artifactId>locators</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+ 
+  <build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version>
+				<configuration>
+					<source>14</source>
+					<target>14</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
   <dependencies>
   <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
@@ -10,12 +24,24 @@
     <artifactId>selenium-java</artifactId>
     <version>4.18.1</version>
 </dependency>
-<dependency>
+  <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>7.9.0</version>
     <scope>test</scope>
 </dependency>
-  
+<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.2.3</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.0.9</version>
+</dependency>
+
   </dependencies>
 </project>
